Rearranged project order.

--- a/index.html
+++ b/index.html
@@ -60,26 +60,26 @@
                 <h2>Work</h2>
                 <div class="projects">
                     <button  class="project-item" id="work1" onclick="document.getElementById('project1').style.display='block'">
-                        <h2>Movie-Drink Matchmaker</h2>
+                        <h2>ShareSp@ce</h2>
                     </button>
                     <button class="project-item" id="work2" onclick="document.getElementById('project2').style.display='block'">
                         <div>
-                            <h2>Code Quiz</h2>
+                            <h2>Movie-Drink Matchmaker</h2>
                         </div>
                     </button>
                     <button class="project-item" id="work3" onclick="document.getElementById('project3').style.display='block'">
                         <div>
-                            <h2>Weather Dashboard</h2>
+                            <h2>Code Quiz</h2>
                         </div>
                     </button>
                     <button class="project-item" id="work4" onclick="document.getElementById('project4').style.display='block'">
                         <div>
-                            <h2>Work Day Scheduler</h2></hw>
+                            <h2>Weather Dashboard</h2></hw>
                         </div>
                     </button>
                     <button class="project-item" id="work5" onclick="document.getElementById('project5').style.display='block'">
                         <div>
-                            <h2>ShareSp@ce</h2>
+                            <h2>Work Day Scheduler</h2>
                         </div>
                     </button>
                 </div>
@@ -113,14 +113,14 @@
             <div class="w3-modal-content custom-modal">
                 <span onclick="document.getElementById('project1').style.display='none'"
                 class="w3-button w3-display-topright modal-close">&times;</span>
-                <h3>Movie-Drink Matchmaker</h3>
+                <h3>ShareSp@ce</h3>
                 <h4>Description</h4>
-                <p>Worked collaboratively with 4 peers to develop a responsive, mobile-first Movie-Drink Matchmaker application.  The user selects a movie genre and drink type and the application returns movies and drinks meeting the criteria.  The user is able to scroll through suggested movies and drinks until finding a favorite combination.  The favorite combination is saved to local storage and persists on the favorites page of the application.</p>
+                <p>An application for sharing your favorite pictures, videos, and GIFs about 10 of the most popular subjects on the web.  Users must create an account and log in, in order to post ideas.</p>
                 <h4>Technologies Used</h4>
-                <p>HTML, CSS, Bulma CSS, JavaScript, jQuery, Third-party APIs, Moment.js</p>
+                <p>HTML, CSS, JavaScript, MySQL, NodeJS, Heroku</p>
                 <h4>Which would you like to view?</h4>
-                <a href="https://evperkinsjr.github.io/movie-drink-matchmaker/" target="_blank" rel="noreferrer noopener">Application</a> 
-                <a href="https://github.com/evperkinsjr/movie-drink-matchmaker" target="_blank" rel="noreferrer noopener">GitHub Repository</a>
+                <a href="https://evening-sea-74828.herokuapp.com/" target="_blank" rel="noreferrer noopener">Application</a> 
+                <a href="https://github.com/Errollinsjr/ShareSpaceProjectTwo" target="_blank" rel="noreferrer noopener">GitHub Repository</a>
             </div>
         </div>
 
@@ -129,14 +129,14 @@
             <div class="w3-modal-content custom-modal">
                 <span onclick="document.getElementById('project2').style.display='none'"
                 class="w3-button w3-display-topright modal-close">&times;</span>
-                <h3>Code Quiz</h3>
+                <h3>Movie-Drink Matchmaker</h3>
                 <h4>Description</h4>
-                <p>The Code Quiz tests a user’s JavaScript knowledge. The user has 30 seconds to answer 10 questions.  Each correct answer earns 5 points. Each incorrect answer deducts 10 seconds from the timer.  When time is up or all questions have been answered the user is able to save their score and initials to the high scores page of the application.</p>
+                <p>Worked collaboratively with 4 peers to develop a responsive, mobile-first Movie-Drink Matchmaker application.  The user selects a movie genre and drink type and the application returns movies and drinks meeting the criteria.  The user is able to scroll through suggested movies and drinks until finding a favorite combination.  The favorite combination is saved to local storage and persists on the favorites page of the application.</p>
                 <h4>Technologies Used</h4>
-                <p>HTML, CSS, JavaScript, Local Storage</p>
+                <p>HTML, CSS, Bulma CSS, JavaScript, Third-party APIs</p>
                 <h4>Which would you like to view?</h4>
-                <a href="https://emangano2816.github.io/code_quiz/" target="_blank" rel="noreferrer noopener">Application</a> 
-                <a href="https://github.com/emangano2816/code_quiz" target="_blank" rel="noreferrer noopener">GitHub Repository</a>
+                <a href="https://evperkinsjr.github.io/movie-drink-matchmaker/" target="_blank" rel="noreferrer noopener">Application</a> 
+                <a href="https://github.com/evperkinsjr/movie-drink-matchmaker" target="_blank" rel="noreferrer noopener">GitHub Repository</a>
             </div>
         </div>
 
@@ -145,14 +145,14 @@
             <div class="w3-modal-content custom-modal">
                 <span onclick="document.getElementById('project3').style.display='none'"
                 class="w3-button w3-display-topright modal-close">&times;</span>
-                <h3>Weather Dashboard</h3>
+                <h3>Code Quiz</h3>
                 <h4>Description</h4>
-                <p>The Weather Dashboard application takes in a user specified city and returns the current and 5-day forecast for that city. The searched cities are “pinned” to the application for reference.  Clicking on the “pinned” cities retrieves the forecast as before.</p>
+                <p>The Code Quiz tests a user’s JavaScript knowledge. The user has 30 seconds to answer 10 questions.  Each correct answer earns 5 points. Each incorrect answer deducts 10 seconds from the timer.  When time is up or all questions have been answered the user is able to save their score and initials to the high scores page of the application.</p>
                 <h4>Technologies Used</h4>
-                <p>HTML, CSS, Bootstrap CSS, JavaScript, jQuery, moment.js, Third-party APIs</p>
+                <p>HTML, CSS, JavaScript</p>
                 <h4>Which would you like to view?</h4>
-                <a href="https://emangano2816.github.io/weather_dashboard/" target="_blank" rel="noreferrer noopener">Application</a> 
-                <a href="https://github.com/emangano2816/weather_dashboard" target="_blank" rel="noreferrer noopener">GitHub Repository</a>
+                <a href="https://emangano2816.github.io/code_quiz/" target="_blank" rel="noreferrer noopener">Application</a> 
+                <a href="https://github.com/emangano2816/code_quiz" target="_blank" rel="noreferrer noopener">GitHub Repository</a>
             </div>
         </div>
 
@@ -161,14 +161,14 @@
             <div class="w3-modal-content custom-modal">
                 <span onclick="document.getElementById('project4').style.display='none'"
                 class="w3-button w3-display-topright modal-close">&times;</span>
-                <h3>Work Day Scheduler</h3>
+                <h3>Weather Dashboard</h3>
                 <h4>Description</h4>
-                <p>When the application is opened, the current date is displayed at the top. As the user scrolls down, the user will see that each timeblock is color coded as past (grey), present (red), and future (green). The user is able to create an event for any given timeblock by clicking into the text area and including text. Clicking the blue save button saves the user's event into local storage. If the user refreshes the page or revisits the application in the same day, the events that were saved persist on the page. When the user opens the application on a new day, the timeblock events reset.</p>
+                <p>The Weather Dashboard application takes in a user specified city and returns the current and 5-day forecast for that city. The searched cities are “pinned” to the application for reference.  Clicking on the “pinned” cities retrieves the forecast as before.</p>
                 <h4>Technologies Used</h4>
-                <p>HTML, CSS, Bootstrap CSS, JavaScript, jQuery, Moment.js</p>
+                <p>HTML, CSS, Bootstrap CSS, JavaScript, Third-party APIs</p>
                 <h4>Which would you like to view?</h4>
-                <a href="https://emangano2816.github.io/work_day_scheduler/" target="_blank" rel="noreferrer noopener">Application</a> 
-                <a href="https://github.com/emangano2816/work_day_scheduler" target="_blank" rel="noreferrer noopener">GitHub Repository</a>
+                <a href="https://emangano2816.github.io/weather_dashboard/" target="_blank" rel="noreferrer noopener">Application</a> 
+                <a href="https://github.com/emangano2816/weather_dashboard" target="_blank" rel="noreferrer noopener">GitHub Repository</a>
             </div>
         </div>
 
@@ -177,14 +177,14 @@
             <div class="w3-modal-content custom-modal">
                 <span onclick="document.getElementById('project5').style.display='none'"
                 class="w3-button w3-display-topright modal-close">&times;</span>
-                <h3>ShareSp@ce</h3>
+                <h3>Work Day Scheduler</h3>
                 <h4>Description</h4>
-                <p>An application for sharing your favorite pictures, videos, and GIFs about 10 of the most popular subjects on the web.  Users must create an account and log in, in order to post ideas.</p>
+                <p>When the application is opened, the current date is displayed at the top. As the user scrolls down, the user will see that each timeblock is color coded as past (grey), present (red), and future (green). The user is able to create an event for any given timeblock by clicking into the text area and including text. Clicking the blue save button saves the user's event into local storage. If the user refreshes the page or revisits the application in the same day, the events that were saved persist on the page. When the user opens the application on a new day, the timeblock events reset.</p>
                 <h4>Technologies Used</h4>
-                <p>HTML, CSS, JavaScript, MySQL, NodeJS</p>
+                <p>HTML, CSS, Bootstrap CSS, JavaScript</p>
                 <h4>Which would you like to view?</h4>
-                <a href="https://evening-sea-74828.herokuapp.com/" target="_blank" rel="noreferrer noopener">Application</a> 
-                <a href="https://github.com/Errollinsjr/ShareSpaceProjectTwo" target="_blank" rel="noreferrer noopener">GitHub Repository</a>
+                <a href="https://emangano2816.github.io/work_day_scheduler/" target="_blank" rel="noreferrer noopener">Application</a> 
+                <a href="https://github.com/emangano2816/work_day_scheduler" target="_blank" rel="noreferrer noopener">GitHub Repository</a>
             </div>
         </div>
 
